src/test/ui/impl-header-lifetime-elision/trait-elided.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/trait-elided.rs:5:6
   |
LL | impl MyTrait for u32 {
   |      ^^^^^^^ expected lifetime parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
